[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/godot-builder/toolbar.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-builder/icons/icon_path.svg" type="Texture" id=2]
[ext_resource path="res://addons/godot-builder/icons/icon_import_check.svg" type="Texture" id=3]
[ext_resource path="res://addons/godot-builder/icons/icon_download.svg" type="Texture" id=4]
[ext_resource path="res://addons/godot-builder/icons/icon_json.svg" type="Texture" id=5]
[ext_resource path="res://addons/godot-builder/icons/icon_plug.svg" type="Texture" id=6]
[ext_resource path="res://addons/godot-builder/icons/icon_wrench.svg" type="Texture" id=7]
[ext_resource path="res://addons/godot-builder/icons/icon_clear.svg" type="Texture" id=8]
[ext_resource path="res://addons/godot-builder/icons/icon_lang_tools.svg" type="Texture" id=9]
[ext_resource path="res://addons/godot-builder/icons/icon_arrow_right.svg" type="Texture" id=10]
[ext_resource path="res://addons/godot-builder/execute_utility.gd" type="Script" id=11]

[node name="Toolbar" type="HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="Options" type="HBoxContainer" parent="." index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 760.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="BuildToolPathButton" type="ToolButton" parent="Options" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 28.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Select the filepath to your build tool."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = true
align = 1
_sections_unfolded = [ "Hint" ]

[node name="BuildToolPathFileDialog" type="FileDialog" parent="Options/BuildToolPathButton" index="0"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 275.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Select a build program"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 0
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "C:/Users/Will_Nations/Documents/GitHub/godot-builder"
current_file = ""
current_path = "C:/Users/Will_Nations/Documents/GitHub/godot-builder/"
_sections_unfolded = [ "Dialog" ]

[node name="Status" type="TextureRect" parent="Options" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_right = 48.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "There are no build conflicts."
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4

[node name="LanguageOption" type="OptionButton" parent="Options" index="2" groups=[
"godot_builder_language_option",
]]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_right = 152.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "C++"
flat = false
align = 0
items = [ "C++", null, false, -1, null ]
selected = 0
_sections_unfolded = [ "Rect" ]

[node name="DynamicOptions" type="HBoxContainer" parent="Options" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_right = 568.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VersionOption" type="OptionButton" parent="Options/DynamicOptions" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "1.0"
flat = false
align = 0
items = [ "1.0", null, false, -1, null, "1.1", null, false, -1, null, "Custom", null, false, -1, null ]
selected = 0
_sections_unfolded = [ "Rect" ]

[node name="PlatformOption" type="OptionButton" parent="Options/DynamicOptions" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 204.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Windows"
flat = false
align = 0
items = [ "OSX", null, false, -1, null, "Windows", null, false, -1, null, "X11", null, false, -1, null ]
selected = 1
_sections_unfolded = [ "Rect" ]

[node name="BitsOption" type="OptionButton" parent="Options/DynamicOptions" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_right = 308.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "64"
flat = false
align = 0
items = [ "64", null, false, -1, null, "32", null, false, -1, null ]
selected = 0
_sections_unfolded = [ "Rect" ]

[node name="TargetOption" type="OptionButton" parent="Options/DynamicOptions" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_right = 412.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "debug"
flat = false
align = 0
items = [ "debug", null, false, -1, null, "release", null, false, -1, null ]
selected = 0

[node name="DownloadButton" type="ToolButton" parent="Options" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 572.0
margin_right = 600.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Downloads any necessary repositories to the user:// folder
so that subsequent operations can execute properly.
You should only need to do this once per project, per bindings version.
If the bindings already exist and you would like to re-download them,
they will NOT be overwritten. You will need to delete them yourself manually."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = true
align = 1
_sections_unfolded = [ "Hint" ]

[node name="JsonButton" type="ToolButton" parent="Options" index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 604.0
margin_right = 632.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Generate the JSON API for the bindings. This ensures that the
generated bindings match the current scripting API for your engine version.
You should only need to do this once per project.
(Updates the provided JSON API from the downloaded files)"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = true
align = 1
_sections_unfolded = [ "Hint" ]

[node name="BindingsButton" type="ToolButton" parent="Options" index="6"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_right = 664.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Generate bindings for the given language's GDNative API version.
You should only need to do this once for each language and version."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = true
align = 1
_sections_unfolded = [ "Hint" ]

[node name="BuildButton" type="ToolButton" parent="Options" index="7"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 668.0
margin_right = 696.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Build a dynamic library using the GDNative bindings library.
The dynamic library will automatically save to your project folder.
You will need to do this every time you make a change to your scripts."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 7 )
flat = true
align = 1
_sections_unfolded = [ "Hint" ]

[node name="CleanButton" type="ToolButton" parent="Options" index="8"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 700.0
margin_right = 728.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 8 )
flat = true
align = 1

[node name="LangToolsButton" type="ToolButton" parent="Options" index="9"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 732.0
margin_right = 760.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Language Tools: If toggled on, build operations
will use language-specific tools for compilation.

Example: Godot Builder provides a C++ Preprocessor
to simplify exposing things to Godot's script API."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 9 )
flat = true
align = 1
_sections_unfolded = [ "Hint" ]

[node name="PluginSettings" type="HBoxContainer" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 764.0
margin_right = 1020.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="GDNativePluginsToggleButton" type="Button" parent="PluginSettings" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "GDNative Plugins"
flat = false
align = 1

[node name="ToolButton" type="ToolButton" parent="PluginSettings" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_right = 155.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 10 )
flat = true
align = 1

[node name="Label" type="Label" parent="PluginSettings" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_top = 5.0
margin_right = 256.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "gdn1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="CleanupConfirmationDialog" type="ConfirmationDialog" parent="." index="2"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Cleanup Confirmation"
resizable = false
dialog_text = "Are you sure you want to clean your selected GDNative plugin? This will delete the library!"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Configs" type="Control" parent="." index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Execute" type="Node" parent="." index="4"]
script = ExtResource( 11 )
_sections_unfolded = [ "Script" ]

[connection signal="pressed" from="Options/BuildToolPathButton" to="." method="_on_BuildToolPathButton_pressed"]
[connection signal="file_selected" from="Options/BuildToolPathButton/BuildToolPathFileDialog" to="." method="_on_BuildToolPathFileDialog_file_selected"]
[connection signal="pressed" from="Options/DownloadButton" to="." method="_on_execute" binds= [ "download" ]]
[connection signal="pressed" from="Options/JsonButton" to="." method="_on_execute" binds= [ "generate_json_api" ]]
[connection signal="pressed" from="Options/BindingsButton" to="." method="_on_execute" binds= [ "generate_bindings" ]]
[connection signal="pressed" from="Options/BuildButton" to="." method="_on_execute" binds= [ "build" ]]
[connection signal="pressed" from="Options/CleanButton" to="." method="_on_CleanButton_pressed"]
[connection signal="toggled" from="PluginSettings/GDNativePluginsToggleButton" to="." method="_on_GDNativePluginsToggleButton_toggled"]
[connection signal="confirmed" from="CleanupConfirmationDialog" to="." method="_on_execute" binds= [ "clean" ]]
[connection signal="thread_finished" from="Execute" to="." method="_on_execute_thread_finished"]
